--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "rails_example"]
 	path = rails_example
 	url = https://github.com/wallerjake/rails_example.git
+[submodule "rails_example_test"]
+	path = rails_example_test
+	url = https://github.com/wallerjake/rails_example.git
